# ai_interview_preparation_platform

./: .gitignore  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.build.json
ai_interview_preparation_platform/: asgi.py  settings.py  urls.py  wsgi.py
apps/api/: __init__.py  claude_service.py
apps/authentication/: authentication.py  middleware.py  permissions.py  serializers.py  urls.py  views.py
apps/demo/: apps.py  middleware.py  urls.py  views.py
apps/demo/templates/: base.html
apps/instructions_difficulty_eval/: __init__.py  apps.py  data_processor.py  difficulty_evaluator.py  difficulty_service.py  instructions_difficulty_eval.py  models.py
apps/instructions_difficulty_eval/management/: __init__.py
apps/instructions_difficulty_eval/migrations/: 0001_initial.py  0003_alter_pythonprogrammingquestion_input.py  (+1 more)
apps/practice/: admin.py  apps.py  grading.py  grading_criteria.txt  models.py  serializers.py  urls.py  views.py
apps/rag/: admin.py  ai_assistants.py  apps.py
assets/js/: App.tsx
codebase_to_text_convert/: codebase_to_text_convert.py
codebase_to_text_convert/output/: codebase.md
data/: sample_questions - 10.csv  sample_questions.csv
diagrams/: activity_diagram.mermaid
diagrams/code2flow/: django_backend.dot  react_frontend.dot
env/: .env.example
operations/git/: set_git_email_and_user.sh  set_git_remote.sh
qa/: apps_practice_views_msb_temp.py
qa/template/: bug_report.md
tests/: test_db_connection.py  test_grading_changes.py  test_grading_details.py  test_sample_data.py
(+29 files in other folders)
